<resources>
    // string activity main
    <string name="app_name">BUMONKEY</string>
    <string name="text_hello">WELCOME</string>
    <string name="text_mess">Did you just collect your salary and you no longer have money? Dont you know what expenses your money ended up in? Dont worry, enter BUMONKEY and you will be able to manage your income better, so that you can achieve all the dreams you set for yourself. </string>
    <string name="buttonlogin3">LOG IN</string>
    <string name="buttonregistre2">REGISTER</string>
    <string name="Toast_butt_login3">USER LOG IN</string>
    <string name="Toast_butt_registre2">USER REGISTRE</string>

    // string activity registre 2
    <string name="textname">NAME AND LASTNAME </string>
    <string name="textemail">EMAIL</string>
    <string name="textcontraseña">PASSWORD</string>
    <string name="textcontraseña2">REPEAT PASSWORD</string>
    <string name="buttonregistre3">REGISTER</string>
    <string name="Toast_butt_registreOK">USER REGISTRE OK, LOG IN</string>
    <string name="Btn_cancel2">CANCEL</string>


    // string activity login 3
    <string name="textView_user">USER:</string>
    <string name="Edttext_email_user">INSERT USER</string>
    <string name="textView_password">PASSWORD:</string>
    <string name="Edttext_password">PASSWORD</string>
    <string name="Btn_Login">LOG IN</string>
    <string name="Btn_cancel">CANCEL</string>
    <string name="Toast_butt_cancel">USER BACK TO WELCOME</string>
    <string name="possitive_button">LOG IN</string>
    <string name="negative_button">CANCEL</string>
    <string name="Alert_dialog_tittle_pos">WELCOME</string>
    <string name="Alert_dialog_message_pos">USER/PASSWORD ARE RIGHT</string>
    <string name="Toast_butt_pos">USER LOG IN</string>
    <string name="Alert_dialog_tittle_neg">ERROR</string>
    <string name="Alert_dialog_message_neg">USER/PASSWORD INCORRECT</string>
    <string name="Toast_butt_neg">USER CANCEL LOG IN</string>

    // string activity go 4
    <string name="Alert_dialog_tittle_help">HELP</string>
    <string name="Alert_dialog_message_help">PLEASE CONTACT US grupo3@bumonkey.com</string>
    <string name="Toast_search">ENTER ITEM SEARCH</string>
    <string name="Toast_edit">ENTER ITEM EDIT</string>
    <string name="Toast_delete">ENTER ITEM DELETE</string>
    <string name="Toast_email">ENTER ITEM EMAIL</string>
    <string name="Toast_upload">ENTER ITEM UPLOAD</string>
    <string name="Alert_dialog_tittle_exit">CLOSE</string>
    <string name="Alert_dialog_message_exit">USER BACK TO WELCOME</string>
    <string name="Boton_expenses">EXPENSES</string>
    <string name="Boton_earnings">EARNINGS</string>
    <string name="Toast_expenses">YOU JUST ENTERED THE EXPENSE MODULE</string>
    <string name="Toast_earnings">YOU JUST ENTERED THE EARNING MODULE</string>

    // string menu
    <string name="item_search">SEARCH</string>
    <string name="item_help">HELP</string>
    <string name="item_email">EMAIL</string>
    <string name="item_delete">DELETE</string>
    <string name="item_upload">UPLOAD</string>
    <string name="item_edit">EDIT</string>
    <string name="item_exit">EXIT</string>

    // string fragmentos
    <string name="leasing">LEASING</string>
    <string name="credit">CREDIT/INTEREST</string>
    <string name="transport">TRANSPORT</string>
    <string name="job">JOB</string>
    <string name="sales">SALES</string>
    <string name="gift">GIFT</string>
    <string name="bonus">BONUS</string>
    <string name="subsidy">SUBSIDY</string>
    <string name="other">OTHER</string>

    //string nav_bar
    <string name="txt_tarea_1">Ir al mercado</string>
    <string name="txt_username">Usuario</string>
    <string name="txt_email">usuario@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>