<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5F8B7"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bumonkey_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_hello"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewmessage"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:text="@string/text_mess" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/buttonlogin3"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#20FF06"
            android:onClick="login"
            android:text="@string/buttonlogin3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonregistre2"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#20FF06"
            android:onClick="register"
            android:text="@string/buttonregistre2"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>