<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/arriendo"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/imagearriendo"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/casa"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="683dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="3"
            android:text="@string/leasing"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="$"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editTextNumber1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/prestamos"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewprestamo"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/ingresos" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="29dp"
            android:layout_height="34dp"
            android:layout_weight="3"
            android:text="@string/credit"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="$"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/transporte"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewtrasporte"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/publictransport"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="29dp"
            android:layout_height="34dp"
            android:layout_weight="3"
            android:text="@string/transport"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="$"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editTextNumber3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>
</LinearLayout>